Alignment Issue Fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,6 @@ body {
     font-size: var(--progress-step-font-size);
     font-weight: 700;
     letter-spacing: 1px;
-    text-align: center;
     padding: 6px 0 4px;
 }
 
@@ -178,7 +177,7 @@ header {
     height: auto;
     position: absolute;
     top: 10px;
-    right: 10px;
+    right: 20px;
     z-index: 10;
     display: block;
     object-fit: cover;
